mensagem de nao conectado a uma rede

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">bootcamp-threading</string>
+    <string name="texto_carregar">Carregar</string>
 </resources>
