extracao de string

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">bootcamp-threading</string>
     <string name="texto_carregar">Carregar</string>
+    <string name="btn_recarregar">recarregar</string>
 </resources>
